syntax = "proto3";

package chip.rpc;

message Empty {
}

service LightingService {
  rpc LightingEvent(Empty) returns (Empty){}
}